CSRF and AJAX issue fixed ;P

--- a/starwars/contact/templates/contact.html
+++ b/starwars/contact/templates/contact.html
@@ -43,7 +43,7 @@
 
                         <tr align="right">
                             <td colspan=2>
-                            <input type="submit" value="Send">
+                            <input type="submit" value="Send" onclick="$.blockUI()">
                             <input type="reset" value="Reset">
                             </td>
                         </tr>
